--- a/notebooks/NoteBook.ipynb
+++ b/notebooks/NoteBook.ipynb
@@ -11,14 +11,16 @@
   {
    "cell_type": "markdown",
    "id": "bcfa989e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# IMPORTS , FONCTIONS ET URL"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "fe34fa59",
    "metadata": {},
    "outputs": [],
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "5e7fdf71",
    "metadata": {},
    "outputs": [],
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "45739e9f",
    "metadata": {},
    "outputs": [],
@@ -129,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "0bc90ebd",
    "metadata": {},
    "outputs": [
@@ -137,7 +139,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3342/2988573174.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/tmp/ipykernel_1573/2988573174.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n"
      ]
     }
@@ -171,7 +173,9 @@
   {
    "cell_type": "markdown",
    "id": "e67d360f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# PROGRAMMES"
    ]
@@ -179,37 +183,36 @@
   {
    "cell_type": "markdown",
    "id": "e81cbcda",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## trouver categorie"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "id": "d0807f82",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3342/101704770.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/tmp/ipykernel_1573/2708441333.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "ResultSet object has no attribute 'string'. You're probably treating a list of elements like a single element. Did you call find_all() when you meant to call find()?",
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"NoneType\") to str",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [42]\u001b[0m, in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m html_page_listing \u001b[38;5;241m=\u001b[39m browser\u001b[38;5;241m.\u001b[39mpage_source \u001b[38;5;66;03m# permet de prendre le code html de la page \u001b[39;00m\n\u001b[1;32m      6\u001b[0m soup \u001b[38;5;241m=\u001b[39m BeautifulSoup(html_page_listing , \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlxml\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;66;03m# créer la soupe avec le parser\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m categories \u001b[38;5;241m=\u001b[39m \u001b[43msoup\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfind_all\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43ma\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m  \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mclass_\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43ma-color-base a-link-normal\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstring\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(categories)\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.8.12/envs/kindlescrapper/lib/python3.8/site-packages/bs4/element.py:2253\u001b[0m, in \u001b[0;36mResultSet.__getattr__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2251\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getattr__\u001b[39m(\u001b[38;5;28mself\u001b[39m, key):\n\u001b[1;32m   2252\u001b[0m     \u001b[38;5;124;03m\"\"\"Raise a helpful exception to explain a common code fix.\"\"\"\u001b[39;00m\n\u001b[0;32m-> 2253\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\n\u001b[1;32m   2254\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mResultSet object has no attribute \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m. You\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mre probably treating a list of elements like a single element. Did you call find_all() when you meant to call find()?\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m key\n\u001b[1;32m   2255\u001b[0m     )\n",
-      "\u001b[0;31mAttributeError\u001b[0m: ResultSet object has no attribute 'string'. You're probably treating a list of elements like a single element. Did you call find_all() when you meant to call find()?"
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [24]\u001b[0m, in \u001b[0;36m<cell line: 8>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m categories \u001b[38;5;241m=\u001b[39m soup\u001b[38;5;241m.\u001b[39mfind_all(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mli\u001b[39m\u001b[38;5;124m'\u001b[39m  , class_ \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma-spacing-micro apb-browse-refinements-indent-2\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m categorie \u001b[38;5;129;01min\u001b[39;00m categories :\n\u001b[0;32m----> 9\u001b[0m     categor \u001b[38;5;241m=\u001b[39m \u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mhttps://www.amazon.com\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mcategorie\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mspan\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstring\u001b[49m\n\u001b[1;32m     10\u001b[0m     lien \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://www.amazon.com\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m categorie\u001b[38;5;241m.\u001b[39ma\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhref\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;28mprint\u001b[39m(categor , lien)\n",
+      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"NoneType\") to str"
      ]
     }
    ],
@@ -220,8 +223,12 @@
     "browser.get(url_kindle_accueil)\n",
     "html_page_listing = browser.page_source # permet de prendre le code html de la page \n",
     "soup = BeautifulSoup(html_page_listing , 'lxml') # créer la soupe avec le parser\n",
-    "categories = soup.find_all('a'  , class_= 'a-color-base a-link-normal').string\n",
-    "print(categories)"
+    "categories = soup.find_all('li'  , class_ = 'a-spacing-micro apb-browse-refinements-indent-2')\n",
+    "for categorie in categories :\n",
+    "    categor = 'https://www.amazon.com'+ categorie.span.string\n",
+    "    lien = 'https://www.amazon.com'+ categorie.a.get('href')\n",
+    "    print(categor , lien)\n",
+    "          # print(categories)"
    ]
   },
   {
@@ -257,34 +264,7 @@
    "id": "712d02b5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "<a class=\"a-color-base a-link-normal\" href=\"/s?bbn=154606011&amp;rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011&amp;dc&amp;qid=1655758439&amp;rnid=154606011&amp;ref=lp_154606011_nr_n_0\">\n",
-    "    \n",
-    "        \n",
-    "\n",
-    "<span dir=\"auto\">Arts &amp; Photography</span>\n",
-    "\n",
-    "    \n",
-    "</a>\n",
-    "\n",
-    "<li class=\"a-spacing-micro apb-browse-refinements-indent-2\"><span class=\"a-list-item\">\n",
-    "        \n",
-    "            \n",
-    "\n",
-    "\n",
-    "\n",
-    "<a class=\"a-color-base a-link-normal\" href=\"/s?bbn=154606011&amp;rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011&amp;dc&amp;qid=1655758439&amp;rnid=154606011&amp;ref=lp_154606011_nr_n_0\">\n",
-    "    \n",
-    "        \n",
-    "\n",
-    "<span dir=\"auto\">Arts &amp; Photography</span>\n",
-    "\n",
-    "    \n",
-    "</a>\n",
-    "\n",
-    "        \n",
-    "    </span></li>"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -351,8 +331,7 @@
    "execution_count": 9,
    "id": "578a143b",
    "metadata": {
-    "hidden": true,
-    "scrolled": false
+    "hidden": true
    },
    "outputs": [
     {
@@ -633,13 +612,7 @@
       "[{'url': 'https://www.amazon.com/Stoic-way-Life-Confident-Perseverance-ebook/dp/B08N5LC4TD/ref=sr_1_13?qid=1656019304&s=digital-text&sr=1-13', 'titre': ' The Stoic way of Life: The ultimate guide of Stoicism to make your everyday modern life Calm  Confident & Positive - Master the Art of Living  Emotional ... & Perseverance (Mastering Stoicism Book 1) ', 'rang': '169619', 'prix': '4'}]\n",
       "[{'url': 'https://www.amazon.com/Architecture-Motherhood-Blueprint-Business-Woman-ebook/dp/B09ZPXLWND/ref=sr_1_14?qid=1656019304&s=digital-text&sr=1-14', 'titre': ' The Architecture of Motherhood: Your Blueprint to Glow as a Business Woman and Mom ', 'rang': '613853', 'prix': '9'}]\n",
       "[{'url': 'https://www.amazon.com/Sandfuture-Justin-Beal-ebook/dp/B08WRCYX6Z/ref=sr_1_15?qid=1656019304&s=digital-text&sr=1-15', 'titre': ' Sandfuture ', 'rang': '691320', 'prix': '65'}]\n",
-      "[{'url': 'https://www.amazon.com/Frank-Lloyd-Wright-Meryle-Secrest-ebook/dp/B00KEPLBYK/ref=sr_1_16?qid=1656019304&s=digital-text&sr=1-16', 'titre': ' Frank Lloyd Wright ', 'rang': '158706', 'prix': '11'}]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[{'url': 'https://www.amazon.com/Frank-Lloyd-Wright-Meryle-Secrest-ebook/dp/B00KEPLBYK/ref=sr_1_16?qid=1656019304&s=digital-text&sr=1-16', 'titre': ' Frank Lloyd Wright ', 'rang': '158706', 'prix': '11'}]\n",
       "[{'url': 'https://www.amazon.com/You-Say-Brick-Life-Louis-ebook/dp/B01KTL87RW/ref=sr_1_17?qid=1656019381&s=digital-text&sr=1-17', 'titre': ' You Say to Brick: The Life of Louis Kahn ', 'rang': '755689', 'prix': '3'}]\n",
       "[{'url': 'https://www.amazon.com/Towards-New-Architecture-Dover-ebook/dp/B00BSK16WC/ref=sr_1_18?qid=1656019381&s=digital-text&sr=1-18', 'titre': ' Towards a New Architecture (Dover Architecture) ', 'rang': '206318', 'prix': '8'}]\n",
       "[{'url': 'https://www.amazon.com/Confessions-Art-Addict-Peggy-Guggenheim-ebook/dp/B00BKZGPL2/ref=sr_1_19?qid=1656019381&s=digital-text&sr=1-19', 'titre': ' Confessions Of an Art Addict ', 'rang': '754605', 'prix': '4'}]\n",
@@ -672,13 +645,7 @@
       "[{'url': 'https://www.amazon.com/Conservation-Concerns-Guide-Collectors-Curators-ebook/dp/B006Q2GJM4/ref=sr_1_46?qid=1656019455&s=digital-text&sr=1-46', 'titre': ' Conservation Concerns: A Guide for Collectors and Curators ', 'rang': '1201930', 'prix': '82'}]\n",
       "[{'url': 'https://www.amazon.com/States-Entanglement-Data-Irish-Landscape-ebook/dp/B09BCPN1BN/ref=sr_1_47?qid=1656019455&s=digital-text&sr=1-47', 'titre': ' States of Entanglement: Data in the Irish Landscape ', 'rang': '1596345', 'prix': None}]\n",
       "[{'url': 'https://www.amazon.com/Norman-Foster-Architecture-Deyan-Sudjic-ebook/dp/B07QT7KLNF/ref=sr_1_48?qid=1656019455&s=digital-text&sr=1-48', 'titre': ' Norman Foster: A Life in Architecture ', 'rang': '1548453', 'prix': '9'}]\n",
-      "[{'url': 'https://www.amazon.com/Lives-Architecture-Nigel-Coates-ebook/dp/B0B2TND5RL/ref=sr_1_49?qid=1656019529&s=digital-text&sr=1-49', 'titre': ' Lives in Architecture: Nigel Coates ', 'rang': '1835563', 'prix': None}]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[{'url': 'https://www.amazon.com/Lives-Architecture-Nigel-Coates-ebook/dp/B0B2TND5RL/ref=sr_1_49?qid=1656019529&s=digital-text&sr=1-49', 'titre': ' Lives in Architecture: Nigel Coates ', 'rang': '1835563', 'prix': None}]\n",
       "[{'url': 'https://www.amazon.com/Green-Imperative-Ecology-Ethics-Architecture-ebook/dp/B09KWGSDZS/ref=sr_1_50?qid=1656019529&s=digital-text&sr=1-50', 'titre': ' The Green Imperative: Ecology and Ethics in Design and Architecture ', 'rang': '638608', 'prix': '9'}]\n",
       "[{'url': 'https://www.amazon.com/Stoicism-Art-Happiness-Strengthening-Intelligence-ebook/dp/B08GZDDQHC/ref=sr_1_51?qid=1656019529&s=digital-text&sr=1-51', 'titre': ' Stoicism And The Art Of Happiness: A Perfectly Balanced Match for Boosting Mental Toughness  Analyzing People  and Strengthening Emotional Intelligence. A Guide to the Empathic and Stoic Way of Life ', 'rang': '687816', 'prix': '6'}]\n",
       "[{'url': 'https://www.amazon.com/You-Belong-Universe-Buckminster-Fuller-ebook/dp/B01ELZYD8Y/ref=sr_1_52?qid=1656019529&s=digital-text&sr=1-52', 'titre': ' You Belong to the Universe: Buckminster Fuller and the Future ', 'rang': '1038058', 'prix': '11'}]\n",
