--- a/notebooks/NoteBook.ipynb
+++ b/notebooks/NoteBook.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "id": "45739e9f",
    "metadata": {},
    "outputs": [],
@@ -140,9 +140,7 @@
   {
    "cell_type": "markdown",
    "id": "aa31f127",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Ouverture du navigateur"
    ]
@@ -150,9 +148,7 @@
   {
    "cell_type": "markdown",
    "id": "d6efddd0",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "avant bien lancer le programme X launch sur windows en cochant sur disable"
    ]
@@ -161,15 +157,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "0bc90ebd",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1183/2988573174.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/tmp/ipykernel_907/2988573174.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n"
      ]
     }
@@ -184,9 +178,7 @@
   {
    "cell_type": "markdown",
    "id": "1c875385",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "avec le programme ci-après j arrive à lancer chrome depuis notebook !! yes"
    ]
@@ -194,9 +186,7 @@
   {
    "cell_type": "markdown",
    "id": "a49ff183",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     ">## il faut réussir à faire différents programme:\n",
     ">   - sur la page d'un livre ( en input un url) trouver le livre , l'auteur, le ranking\n",
@@ -218,7 +208,6 @@
    "cell_type": "markdown",
    "id": "7b8d00d9",
    "metadata": {
-    "heading_collapsed": true,
     "tags": []
    },
    "source": [
@@ -229,9 +218,7 @@
    "cell_type": "code",
    "execution_count": 54,
    "id": "d0807f82",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -299,61 +286,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "id": "7c49eec7",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Architects, A-Z',\n",
-       "  'https://www.amazon.com/s?bbn=157630011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011%2Cn%3A157631011&dc&qid=1657515923&rnid=157630011&ref=lp_157630011_nr_n_0'),\n",
-       " ('Building Types & Styles',\n",
-       "  'https://www.amazon.com/s?bbn=157630011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011%2Cn%3A157632011&dc&qid=1657515923&rnid=157630011&ref=lp_157630011_nr_n_1'),\n",
-       " ('Criticism',\n",
-       "  'https://www.amazon.com/s?bbn=157630011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011%2Cn%3A157636011&dc&qid=1657515923&rnid=157630011&ref=lp_157630011_nr_n_2'),\n",
-       " ('Drawing & Modelling',\n",
-       "  'https://www.amazon.com/s?bbn=157630011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011%2Cn%3A157637011&dc&qid=1657515923&rnid=157630011&ref=lp_157630011_nr_n_3'),\n",
-       " ('Historic Preservation',\n",
-       "  'https://www.amazon.com/s?bbn=157630011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011%2Cn%3A157639011&dc&qid=1657515923&rnid=157630011&ref=lp_157630011_nr_n_4'),\n",
-       " ('History & Periods',\n",
-       "  'https://www.amazon.com/s?bbn=157630011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011%2Cn%3A157640011&dc&qid=1657515923&rnid=157630011&ref=lp_157630011_nr_n_5'),\n",
-       " ('Interior Design',\n",
-       "  'https://www.amazon.com/s?bbn=157630011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011%2Cn%3A157641011&dc&qid=1657515923&rnid=157630011&ref=lp_157630011_nr_n_6'),\n",
+       "[('Auditing',\n",
+       "  'https://www.amazon.com/s?bbn=154880011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154821011%2Cn%3A154880011%2Cn%3A154881011&dc&qid=1657600510&rnid=154880011&ref=lp_154880011_nr_n_0'),\n",
+       " ('CPA',\n",
+       "  'https://www.amazon.com/s?bbn=154880011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154821011%2Cn%3A154880011%2Cn%3A158162011&dc&qid=1657600510&rnid=154880011&ref=lp_154880011_nr_n_1'),\n",
+       " ('Financial',\n",
+       "  'https://www.amazon.com/s?bbn=154880011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154821011%2Cn%3A154880011%2Cn%3A154882011&dc&qid=1657600510&rnid=154880011&ref=lp_154880011_nr_n_2'),\n",
+       " ('Governmental',\n",
+       "  'https://www.amazon.com/s?bbn=154880011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154821011%2Cn%3A154880011%2Cn%3A154884011&dc&qid=1657600510&rnid=154880011&ref=lp_154880011_nr_n_3'),\n",
        " ('International',\n",
-       "  'https://www.amazon.com/s?bbn=157630011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011%2Cn%3A157645011&dc&qid=1657515923&rnid=157630011&ref=lp_157630011_nr_n_7'),\n",
-       " ('Landscape',\n",
-       "  'https://www.amazon.com/s?bbn=157630011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011%2Cn%3A157654011&dc&qid=1657515923&rnid=157630011&ref=lp_157630011_nr_n_8'),\n",
-       " ('Project Planning & Management',\n",
-       "  'https://www.amazon.com/s?bbn=157630011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011%2Cn%3A157655011&dc&qid=1657515923&rnid=157630011&ref=lp_157630011_nr_n_9'),\n",
-       " ('Reference',\n",
-       "  'https://www.amazon.com/s?bbn=157630011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011%2Cn%3A157656011&dc&qid=1657515923&rnid=157630011&ref=lp_157630011_nr_n_10'),\n",
-       " ('Study & Teaching',\n",
-       "  'https://www.amazon.com/s?bbn=157630011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011%2Cn%3A157657011&dc&qid=1657515923&rnid=157630011&ref=lp_157630011_nr_n_11'),\n",
-       " ('Urban & Land Use Planning',\n",
-       "  'https://www.amazon.com/s?bbn=157630011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011%2Cn%3A157658011&dc&qid=1657515923&rnid=157630011&ref=lp_157630011_nr_n_12'),\n",
-       " ('Vernacular Architecture',\n",
-       "  'https://www.amazon.com/s?bbn=157630011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011%2Cn%3A14530422011&dc&qid=1657515923&rnid=157630011&ref=lp_157630011_nr_n_13')]"
+       "  'https://www.amazon.com/s?bbn=154880011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154821011%2Cn%3A154880011%2Cn%3A154885011&dc&qid=1657600510&rnid=154880011&ref=lp_154880011_nr_n_4'),\n",
+       " ('Managerial',\n",
+       "  'https://www.amazon.com/s?bbn=154880011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154821011%2Cn%3A154880011%2Cn%3A154886011&dc&qid=1657600510&rnid=154880011&ref=lp_154880011_nr_n_5'),\n",
+       " ('Standards',\n",
+       "  'https://www.amazon.com/s?bbn=154880011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154821011%2Cn%3A154880011%2Cn%3A8493714011&dc&qid=1657600510&rnid=154880011&ref=lp_154880011_nr_n_6')]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trouver_categorie_page(\"https://www.amazon.com/s?bbn=154607011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011&dc&qid=1657515864&rnid=154607011&ref=lp_154607011_nr_n_0\")"
+    "trouver_categorie_page(\"https://www.amazon.com/s?bbn=154821011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154821011%2Cn%3A154880011&dc&qid=1657600447&rnid=154821011&ref=lp_154821011_nr_n_0\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "id": "17a5c41d",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -361,22 +330,20 @@
        "[]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trouver_categorie_page(\"https://www.amazon.com/s?bbn=157630011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011%2Cn%3A157631011&dc&qid=1657515923&rnid=157630011&ref=lp_157630011_nr_n_0\")"
+    "trouver_categorie_page(\"https://www.amazon.com/s?bbn=154880011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154821011%2Cn%3A154880011%2Cn%3A154881011&dc&qid=1657600510&rnid=154880011&ref=lp_154880011_nr_n_0\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 59,
    "id": "e37ba8e0",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "IndexError",
@@ -398,17 +365,13 @@
   {
    "cell_type": "markdown",
    "id": "07fa6918",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "c50236cb",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": []
   },
   {
@@ -872,9 +835,7 @@
   {
    "cell_type": "markdown",
    "id": "e8b4761b",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Gestion de l'incrémentation fin de la catégorie"
    ]
@@ -883,9 +844,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "39ecf93b",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -911,6 +870,34 @@
     "    for livre in livres:\n",
     "         url_du_livre = 'https://www.amazon.com'+livre.h2.a.get('href')\n",
     "         encryper_depuis_url_page_livre(url_du_livre) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "336eac31",
+   "metadata": {},
+   "source": [
+    "## Architecture , algorithme"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "92bbf09f",
+   "metadata": {},
+   "source": [
+    "ouvrir une page\n",
+    "    lister les catégories\n",
+    "        avoir une liste avec catégorie 1 , 2, 3,\n",
+    "            ouvrir categorie de la liste : \n",
+    "                vérifier s'il existe une sous categories:\n",
+    "                    s'il n'y a pas de catégories : trouver le node\n",
+    "                        se mettre sur node , page 1\n",
+    "                            vérifier que la page est valide\n",
+    "                                si la page est valide  \n",
+    "                                scrapper les 10 livres de la page\n",
+    "                                incrémenter le node\n",
+    "                            si la page n'est pas valide, \n",
+    "                    s'il y a une sous categorie, "
    ]
   },
   {
