utuilistion list et pandas

--- a/notebooks/NoteBook.ipynb
+++ b/notebooks/NoteBook.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "fe34fa59",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "5e7fdf71",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "45739e9f",
    "metadata": {},
    "outputs": [],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "0bc90ebd",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_955/2988573174.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/tmp/ipykernel_884/2988573174.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n"
      ]
     }
@@ -1647,8 +1647,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 117,
    "id": "26f02b74",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name categorie</th>\n",
+       "      <th>cat 1</th>\n",
+       "      <th>cat 2</th>\n",
+       "      <th>cat 3</th>\n",
+       "      <th>cat 4</th>\n",
+       "      <th>cat 5</th>\n",
+       "      <th>cat final</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Arts &amp; Photography</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=154606011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Name categorie  cat 1   cat 2  cat 3  cat 4  cat 5  cat final  \\\n",
+       "0  Arts & Photography       1      0      0      0      0          0   \n",
+       "\n",
+       "                                                 url  \n",
+       "0  https://www.amazon.com/s?bbn=154606011&rh=n%3A...  "
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arts_and_photo = [['Arts & Photography', 1,0,0,0,0,0,'https://www.amazon.com/s?bbn=154606011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011&dc&qid=1657690389&rnid=154606011&ref=lp_154606011_nr_n_0']]\n",
+    "index = ['Name categorie','cat 1 ','cat 2','cat 3','cat 4', 'cat 5' ,'cat final','url']\n",
+    "# Create the pandas DataFrame\n",
+    "df = pd.DataFrame(arts_and_photo, columns= index)\n",
+    "  \n",
+    "# print dataframe.\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "8d1159fd",
    "metadata": {},
    "outputs": [
     {
@@ -1678,6 +1756,84 @@
        "      <th>cat 3</th>\n",
        "      <th>cat 4</th>\n",
        "      <th>cat 5</th>\n",
+       "      <th>cat final</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Architecture</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=154607011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Name categorie  cat 1   cat 2  cat 3  cat 4  cat 5  cat final  \\\n",
+       "0   Architecture       0      1      0      0      0          0   \n",
+       "\n",
+       "                                                 url  \n",
+       "0  https://www.amazon.com/s?bbn=154607011&rh=n%3A...  "
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "architecture = [['Architecture',0,1,0,0,0,0,'https://www.amazon.com/s?bbn=154607011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011&dc&qid=1658205131&rnid=154607011&ref=lp_154607011_nr_n_0']]\n",
+    "# Create the pandas DataFrame\n",
+    "df2 = pd.DataFrame(architecture, columns= index)\n",
+    "  \n",
+    "# print dataframe.\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "d0276112",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name categorie</th>\n",
+       "      <th>cat 1</th>\n",
+       "      <th>cat 2</th>\n",
+       "      <th>cat 3</th>\n",
+       "      <th>cat 4</th>\n",
+       "      <th>cat 5</th>\n",
+       "      <th>cat final</th>\n",
        "      <th>url</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1690,6 +1846,193 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=154606011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Architecture</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=154607011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Name categorie  cat 1   cat 2  cat 3  cat 4  cat 5  cat final  \\\n",
+       "0  Arts & Photography       1      0      0      0      0          0   \n",
+       "0        Architecture       0      1      0      0      0          0   \n",
+       "\n",
+       "                                                 url  \n",
+       "0  https://www.amazon.com/s?bbn=154606011&rh=n%3A...  \n",
+       "0  https://www.amazon.com/s?bbn=154607011&rh=n%3A...  "
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.concat([df,df2])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "e6e50e96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.get(df['url'][0][0:1][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "d0f0a8b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listing = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "9f940fab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listing  = architecture"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "ddb61605",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Arts & Photography',\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 'https://www.amazon.com/s?bbn=154606011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011&dc&qid=1657690389&rnid=154606011&ref=lp_154606011_nr_n_0']"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arts_and_photo[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "16be4848",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listing= architecture + arts_and_photo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "4022cc12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(listing)) : # petite fonction pour vérifieer que l'on peu accéder facilement aux url \n",
+    "    browser.get(listing[i][7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "4b125075",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "dataframe = pd.DataFrame(listing,columns= index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "c7d31ef0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name categorie</th>\n",
+       "      <th>cat 1</th>\n",
+       "      <th>cat 2</th>\n",
+       "      <th>cat 3</th>\n",
+       "      <th>cat 4</th>\n",
+       "      <th>cat 5</th>\n",
+       "      <th>cat final</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Architecture</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=154607011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Arts &amp; Photography</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>https://www.amazon.com/s?bbn=154606011&amp;rh=n%3A...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1697,34 +2040,28 @@
        "</div>"
       ],
       "text/plain": [
-       "       Name categorie  cat 1   cat 2  cat 3  cat 4  cat 5  \\\n",
-       "0  Arts & Photography       1      0      0      0      0   \n",
+       "       Name categorie  cat 1   cat 2  cat 3  cat 4  cat 5  cat final  \\\n",
+       "0        Architecture       0      1      0      0      0          0   \n",
+       "1  Arts & Photography       1      0      0      0      0          0   \n",
        "\n",
        "                                                 url  \n",
-       "0  https://www.amazon.com/s?bbn=154606011&rh=n%3A...  "
+       "0  https://www.amazon.com/s?bbn=154607011&rh=n%3A...  \n",
+       "1  https://www.amazon.com/s?bbn=154606011&rh=n%3A...  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = [['Arts & Photography', 1,0,0,0,0,'https://www.amazon.com/s?bbn=154606011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011&dc&qid=1657690389&rnid=154606011&ref=lp_154606011_nr_n_0']]\n",
-    "  \n",
-    "# Create the pandas DataFrame\n",
-    "df = pd.DataFrame(data, columns=['Name categorie','cat 1 ','cat 2','cat 3','cat 4', 'cat 5' ,'url'])\n",
-    "  \n",
-    "# print dataframe.\n",
-    "df"
+    "dataframe"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "f2764a5e",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Depuis première page d'une categorie trouver le bon node pour pouvoir les dérouler"
    ]
@@ -1733,9 +2070,7 @@
    "cell_type": "code",
    "execution_count": 60,
    "id": "a6d64d6d",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "exemple = \"https://www.amazon.com/s?bbn=157630011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011%2Cn%3A157631011&dc&qid=1657515923&rnid=157630011&ref=lp_157630011_nr_n_0\"\n",
@@ -1746,9 +2081,7 @@
    "cell_type": "code",
    "execution_count": 85,
    "id": "1cf0dfda",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def tester_un_node(node):\n",
@@ -1760,9 +2093,7 @@
    "cell_type": "code",
    "execution_count": 66,
    "id": "d70d4161",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tester_un_node('3A154606011')"
@@ -1773,7 +2104,6 @@
    "execution_count": 79,
    "id": "34a6d670",
    "metadata": {
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -1796,9 +2126,7 @@
    "cell_type": "code",
    "execution_count": 86,
    "id": "607d194e",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
